# docker-inspect2compose

./: LICENSE  README.md  pyproject.toml  requirements.txt
docker_inspect2compose/: cli.py
